VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

void    CADAPI CadInsBlockPutY       (VHANDLE hEnt, double Y);

double  CADAPI CadInsBlockGetZ       (VHANDLE hEnt);

void    CADAPI CadInsBlockPutZ       (VHANDLE hEnt, double Z);

void    CADAPI CadInsBlockGetPoint   (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadInsBlockPutPoint   (VHANDLE hEnt, double X, double Y, double Z);

double  CADAPI CadInsBlockGetScale   (VHANDLE hEnt);

void    CADAPI CadInsBlockPutScale   (VHANDLE hEnt, double Scal);

double  CADAPI CadInsBlockGetScaleX  (VHANDLE hEnt);

void    CADAPI CadInsBlockPutScaleX  (VHANDLE hEnt, double Sx);

double  CADAPI CadInsBlockGetScaleY  (VHANDLE hEnt);

void    CADAPI CadInsBlockPutScaleY  (VHANDLE hEnt, double Sy);

double  CADAPI CadInsBlockGetScaleZ  (VHANDLE hEnt);

void    CADAPI CadInsBlockPutScaleZ  (VHANDLE hEnt, double Sz);

double  CADAPI CadInsBlockGetAngle   (VHANDLE hEnt);

void    CADAPI CadInsBlockPutAngle   (VHANDLE hEnt, double Angle);

UINT    CADAPI CadInsBlockGetNumRows (VHANDLE hEnt);

void    CADAPI CadInsBlockPutNumRows (VHANDLE hEnt, UINT NumRows);

UINT    CADAPI CadInsBlockGetNumCols (VHANDLE hEnt);

void    CADAPI CadInsBlockPutNumCols (VHANDLE hEnt, UINT NumCols);

double  CADAPI CadInsBlockGetRowDist (VHANDLE hEnt);

void    CADAPI CadInsBlockPutRowDist (VHANDLE hEnt, double RowDist);

double  CADAPI CadInsBlockGetColDist (VHANDLE hEnt);

void    CADAPI CadInsBlockPutColDist (VHANDLE hEnt, double ColDist);

// Attributes
BOOL    CADAPI CadInsBlockHasAttribs  (VHANDLE hEnt);

VHANDLE CADAPI CadInsBlockGetFirstAtt (VHANDLE hEnt);

VHANDLE CADAPI CadInsBlockGetNextAtt  (VHANDLE hEnt, VHANDLE hAtt);



/******************************************************************************
* ATTRIBUTE
*******************************************************************************/
VHANDLE CADAPI CadAddAttrib         (VDWG hDwg, LPCTSTR szTag, LPCTSTR szDefValue, double X, double Y, double Z);

IDOBJ   CADAPI CadAttGetStyleID     (VHANDLE hEnt);

void    CADAPI CadAttPutStyleID     (VHANDLE hEnt, IDOBJ Id);

void    CADAPI CadAttGetPoint       (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadAttPutPoint       (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadAttGetTag         (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadAttPutTag         (VHANDLE hEnt, LPCTSTR szText);

void    CADAPI CadAttGetPrompt      (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadAttPutPrompt      (VHANDLE hEnt, LPCTSTR szText);

void    CADAPI CadAttGetDefValue    (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadAttPutDefValue    (VHANDLE hEnt, LPCTSTR szText);

void    CADAPI CadAttGetValue       (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadAttPutValue       (VHANDLE hEnt, LPCTSTR szText);

double  CADAPI CadAttGetAngle       (VHANDLE hEnt);

void    CADAPI CadAttPutAngle       (VHANDLE hEnt, double Angle);

double  CADAPI CadAttGetHeight      (VHANDLE hEnt);

void    CADAPI CadAttPutHeight      (VHANDLE hEnt, double Height);

double  CADAPI CadAttGetWidth       (VHANDLE hEnt);

void    CADAPI CadAttPutWidth       (VHANDLE hEnt, double Width);

double  CADAPI CadAttGetOblique     (VHANDLE hEnt);

void    CADAPI CadAttPutOblique     (VHANDLE hEnt, double Angle);

int     CADAPI CadAttGetAlign       (VHANDLE hEnt);

void    CADAPI CadAttPutAlign       (VHANDLE hEnt, int Align);

BOOL    CADAPI CadAttGetBackward    (VHANDLE hEnt);

void    CADAPI CadAttPutBackward    (VHANDLE hEnt, BOOL bBackward);

BOOL    CADAPI CadAttGetUpsideDown  (VHANDLE hEnt);

void    CADAPI CadAttPutUpsideDown  (VHANDLE hEnt, BOOL bUpsideDown);

int     CADAPI CadAttGetMode        (VHANDLE hEnt);

void    CADAPI CadAttPutMode        (VHANDLE hEnt, int Mode);

//BOOL    CADAPI CadAttGetConst       (VHANDLE hEnt);
//void    CADAPI CadAttPutConst       (VHANDLE hEnt, BOOL bConst);


/******************************************************************************
* XREF
*******************************************************************************/
//VHANDLE CADAPI CadAddXref       (VDWG hDwg, LPCTSTR szFileName, double X, double Y, double Z, double Scal, double Angle);
//void    CADAPI CadXrefGetFile   (VHANDLE hEnt, TCHAR* szFileName);
//void    CADAPI CadXrefPutFile   (VHANDLE hEnt, LPCTSTR szFileName);
//void    CADAPI CadXrefGetPoint  (VHANDLE hEnt, double* pX, double* pY, double* pZ);
//void    CADAPI CadXrefPutPoint  (VHANDLE hEnt, double X, double Y, double Z);
//double  CADAPI CadXrefGetScale  (VHANDLE hEnt);
//void    CADAPI CadXrefPutScale  (VHANDLE hEnt, double Scal);
//double  CADAPI CadXrefGetScaleX (VHANDLE hEnt);
//void    CADAPI CadXrefPutScaleX (VHANDLE hEnt, double Sx);
//double  CADAPI CadXrefGetScaleY (VHANDLE hEnt);
//void    CADAPI CadXrefPutScaleY (VHANDLE hEnt, double Sy);
//double  CADAPI CadXrefGetScaleZ (VHANDLE hEnt);
//void    CADAPI CadXrefPutScaleZ (VHANDLE hEnt, double Sz);
//double  CADAPI CadXrefGetAngle  (VHANDLE hEnt);
//void    CADAPI CadXrefPutAngle  (VHANDLE hEnt, double Angle);


/******************************************************************************
* IMAGE
*******************************************************************************/
VHANDLE CADAPI CadAddImage       (VDWG hDwg, LPCTSTR szFileName, double X, double Y, double Z, double Scal);

VHANDLE CADAPI CadAddImagePlace  (VDWG hDwg, int Id, int Width, int Height, double X, double Y, double Z, double Scal);

void    CADAPI CadImageGetFile   (VHANDLE hEnt, TCHAR* szFileName);

void    CADAPI CadImagePutFile   (VHANDLE hEnt, LPCTSTR szFileName);

double  CADAPI CadImageGetX      (VHANDLE hEnt);

void    CADAPI CadImagePutX      (VHANDLE hEnt, double X);

double  CADAPI CadImageGetY      (VHANDLE hEnt);

void    CADAPI CadImagePutY      (VHANDLE hEnt, double Y);

double  CADAPI CadImageGetZ      (VHANDLE hEnt);

void    CADAPI CadImagePutZ      (VHANDLE hEnt, double Z);

void    CADAPI CadImageGetPoint  (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadImagePutPoint  (VHANDLE hEnt, double X, double Y, double Z);

double  CADAPI CadImageGetScale  (VHANDLE hEnt);

void    CADAPI CadImagePutScale  (VHANDLE hEnt, double Scal);

double  CADAPI CadImageGetScaleX (VHANDLE hEnt);

void    CADAPI CadImagePutScaleX (VHANDLE hEnt, double Sx);

double  CADAPI CadImageGetScaleY (VHANDLE hEnt);

void    CADAPI CadImagePutScaleY (VHANDLE hEnt, double Sy);

void    CADAPI CadImagePutSize   (VHANDLE hEnt, int Width, int Height);



/******************************************************************************
* HATCH
*******************************************************************************/
BOOL    CADAPI CadAddHatchPoint  (VDWG hDwg, double X, double Y);

BOOL    CADAPI CadAddHatchPath   (VDWG hDwg, VHANDLE hEnt);

VHANDLE CADAPI CadAddHatch       (VDWG hDwg, LPCTSTR szFileName, LPCTSTR szPatName, double Scal, double Angle);

UINT    CADAPI CadEngrave        (VDWG hDwg, BOOL bSelected, LPCTSTR szBlockName, double Step, double Angle);

void    CADAPI CadHatchPutPattern(VHANDLE hEnt, LPCTSTR szFileName, LPCTSTR szPatName);

void    CADAPI CadHatchGetName   (VHANDLE hEnt, TCHAR* szName);

UINT    CADAPI CadHatchGetPattern(VHANDLE hEnt, TCHAR* szPattern);

void    CADAPI CadHatchPutScale  (VHANDLE hEnt, double Scal);

double  CADAPI CadHatchGetScale  (VHANDLE hEnt);

void    CADAPI CadHatchPutAngle  (VHANDLE hEnt, double Angle);

double  CADAPI CadHatchGetAngle  (VHANDLE hEnt);

double  CADAPI CadHatchGetSize   (VHANDLE hEnt);



/******************************************************************************
* DIMENSION
*******************************************************************************/
BOOL    CADAPI CadAddDimPoint   (UINT Index, double X, double Y, double Z);

VHANDLE CADAPI CadAddDim        (VDWG hDwg, int DimType);

IDOBJ   CADAPI CadDimGetStyleID (VHANDLE hEnt);

void    CADAPI CadDimPutStyleID (VHANDLE hEnt, IDOBJ Id);

void    CADAPI CadDimPutText    (VHANDLE hEnt, LPCTSTR szText);

void    CADAPI CadDimGetText    (VHANDLE hEnt, TCHAR* szText);

void    CADAPI CadDimGetPoint   (VHANDLE hEnt, int Index, double* pX, double* pY, double* pZ);

void    CADAPI CadDimPutPoint   (VHANDLE hEnt, int Index, double X, double Y, double Z);

int     CADAPI CadDimGetType    (VHANDLE hEnt);

double  CADAPI CadDimGetValue   (VHANDLE hEnt);



/******************************************************************************
* LEADER
*******************************************************************************/
VHANDLE CADAPI CadAddLeader        (VDWG hDwg, LPCTSTR szText);

UINT    CADAPI CadLeaderGetNumVers (VHANDLE hEnt);

void    CADAPI CadLeaderPutNumVers (VHANDLE hEnt, UINT nVers);

void    CADAPI CadLeaderGetVer     (VHANDLE hEnt, UINT iVer, double* pX, double* pY, double* pZ);

void    CADAPI CadLeaderPutVer     (VHANDLE hEnt, UINT iVer, double X, double Y, double Z);

BOOL    CADAPI CadLeaderGetSpline  (VHANDLE hEnt);

void    CADAPI CadLeaderPutSpline  (VHANDLE hEnt, BOOL bSpline);

UINT    CADAPI CadLeaderGetTextLen (VHANDLE hEnt);

void    CADAPI CadLeaderGetText    (VHANDLE hEnt, TCHAR* szText, UINT MaxChars);

void    CADAPI CadLeaderPutText    (VHANDLE hEnt, LPCTSTR szText);


/******************************************************************************
* CUSTOM ENTITY
*******************************************************************************/
VHANDLE CADAPI CadAddCustom      (VDWG hDwg, int CustType, void* pData, int nBytes);

void    CADAPI CadCustomPutOwner (VHANDLE hEnt, void* pObject);

DWORD   CADAPI CadCustomGetOwner (VHANDLE hEnt);

int     CADAPI CadCustomGetType  (VHANDLE hEnt);

void    CADAPI CadCustomPutData  (VHANDLE hEnt, void* pData, int nBytes);