VS2005/Common/VeCADAPI/CadApi2.bas


Public Declare Sub      CadInsBlockPutY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadInsBlockGetZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadInsBlockGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadInsBlockPutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadInsBlockGetScale Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal Scal As Double)
Public Declare Function CadInsBlockGetScaleX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutScaleX Lib "vecad.dll" (ByVal hEnt As Long, ByVal Sx As Double)
Public Declare Function CadInsBlockGetScaleY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutScaleY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Sy As Double)
Public Declare Function CadInsBlockGetScaleZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutScaleZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Sz As Double)
Public Declare Function CadInsBlockGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadInsBlockGetNumRows Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadInsBlockPutNumRows Lib "vecad.dll" (ByVal hEnt As Long, ByVal NumRows As Long)
Public Declare Function CadInsBlockGetNumCols Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadInsBlockPutNumCols Lib "vecad.dll" (ByVal hEnt As Long, ByVal NumCols As Long)
Public Declare Function CadInsBlockGetRowDist Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutRowDist Lib "vecad.dll" (ByVal hEnt As Long, ByVal RowDist As Double)
Public Declare Function CadInsBlockGetColDist Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadInsBlockPutColDist Lib "vecad.dll" (ByVal hEnt As Long, ByVal ColDist As Double)
Public Declare Function CadInsBlockHasAttribs Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadInsBlockGetFirstAtt Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadInsBlockGetNextAtt Lib "vecad.dll" (ByVal hEnt As Long, ByVal hAtt As Long) As Long
Public Declare Function CadAddAttrib Lib "vecad.dll" (ByVal hDwg As Long, ByVal szTag As String, ByVal szDefValue As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadAttGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadAttPutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Sub      CadAttGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadAttPutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadAttGetTag Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadAttPutTag Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Sub      CadAttGetPrompt Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadAttPutPrompt Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Sub      CadAttGetDefValue Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadAttPutDefValue Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Sub      CadAttGetValue Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadAttPutValue Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Function CadAttGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadAttPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadAttGetHeight Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadAttPutHeight Lib "vecad.dll" (ByVal hEnt As Long, ByVal Height As Double)
Public Declare Function CadAttGetWidth Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadAttPutWidth Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Double)
Public Declare Function CadAttGetOblique Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadAttPutOblique Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadAttGetAlign Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadAttPutAlign Lib "vecad.dll" (ByVal hEnt As Long, ByVal Align As Long)
Public Declare Function CadAttGetBackward Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadAttPutBackward Lib "vecad.dll" (ByVal hEnt As Long, ByVal bBackward As Long)
Public Declare Function CadAttGetUpsideDown Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadAttPutUpsideDown Lib "vecad.dll" (ByVal hEnt As Long, ByVal bUpsideDown As Long)
Public Declare Function CadAttGetMode Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadAttPutMode Lib "vecad.dll" (ByVal hEnt As Long, ByVal Mode As Long)
Public Declare Function CadAddImage Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Scal As Double) As Long
Public Declare Function CadAddImagePlace Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long, ByVal Width As Long, ByVal Height As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Scal As Double) As Long
Public Declare Sub      CadImageGetFile Lib "vecad.dll" (ByVal hEnt As Long, ByVal szFileName As Any)
Public Declare Sub      CadImagePutFile Lib "vecad.dll" (ByVal hEnt As Long, ByVal szFileName As String)
Public Declare Function CadImageGetX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutX Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadImageGetY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadImageGetZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadImageGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadImagePutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadImageGetScale Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal Scal As Double)
Public Declare Function CadImageGetScaleX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutScaleX Lib "vecad.dll" (ByVal hEnt As Long, ByVal Sx As Double)
Public Declare Function CadImageGetScaleY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadImagePutScaleY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Sy As Double)
Public Declare Sub      CadImagePutSize Lib "vecad.dll" (ByVal hEnt As Long, ByVal Width As Long, ByVal Height As Long)
Public Declare Function CadAddHatchPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function CadAddHatchPath Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long) As Long
Public Declare Function CadAddHatch Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String, ByVal szPatName As String, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function CadEngrave Lib "vecad.dll" (ByVal hDwg As Long, ByVal bSelected As Long, ByVal szBlockName As String, ByVal Step As Double, ByVal Angle As Double) As Long
Public Declare Sub      CadHatchPutPattern Lib "vecad.dll" (ByVal hEnt As Long, ByVal szFileName As String, ByVal szPatName As String)
Public Declare Sub      CadHatchGetName Lib "vecad.dll" (ByVal hEnt As Long, ByVal szName As Any)
Public Declare Function CadHatchGetPattern Lib "vecad.dll" (ByVal hEnt As Long, ByVal szPattern As Any) As Long
Public Declare Sub      CadHatchPutScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal Scal As Double)
Public Declare Function CadHatchGetScale Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadHatchPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadHatchGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadHatchGetSize Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadAddDimPoint Lib "vecad.dll" (ByVal Index As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadAddDim Lib "vecad.dll" (ByVal hDwg As Long, ByVal DimType As Long) As Long
Public Declare Function CadDimGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadDimPutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Sub      CadDimPutText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Sub      CadDimGetText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any)
Public Declare Sub      CadDimGetPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal Index As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadDimPutPoint Lib "vecad.dll" (ByVal hEnt As Long, ByVal Index As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadDimGetType Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadDimGetValue Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadAddLeader Lib "vecad.dll" (ByVal hDwg As Long, ByVal szText As String) As Long
Public Declare Function CadLeaderGetNumVers Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadLeaderPutNumVers Lib "vecad.dll" (ByVal hEnt As Long, ByVal nVers As Long)
Public Declare Sub      CadLeaderGetVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadLeaderPutVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadLeaderGetSpline Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadLeaderPutSpline Lib "vecad.dll" (ByVal hEnt As Long, ByVal bSpline As Long)
Public Declare Function CadLeaderGetTextLen Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadLeaderGetText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any, ByVal MaxChars As Long)
Public Declare Sub      CadLeaderPutText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Function CadAddCustom Lib "vecad.dll" (ByVal hDwg As Long, ByVal CustType As Long, ByVal pData As Any, ByVal nBytes As Long) As Long
Public Declare Sub      CadCustomPutOwner Lib "vecad.dll" (ByVal hEnt As Long, ByVal pObject As Any)
Public Declare Function CadCustomGetOwner Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadCustomGetType Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadCustomPutData Lib "vecad.dll" (ByVal hEnt As Long, ByVal pData As Any, ByVal nBytes As Long)
